<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/google_udacity_nanodegree"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/udacity_google_nanodegree" />


        <TextView
            android:id="@+id/title"
            style="@style/MyTextViewStyle.Heading"
            android:layout_width="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/udacity_title"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/address"
            style="@style/MyTextViewStyle.Description"
            android:layout_width="0dp"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/address"
            android:text="@string/udacity_address"
            app:layout_constraintEnd_toEndOf="@+id/title"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/title"
            android:drawableStart="@drawable/address" />

        <TextView
            android:id="@+id/phone"
            style="@style/MyTextViewStyle.Description"
            android:layout_width="0dp"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/phone"
            android:text="@string/udacity_phone"
            app:layout_constraintEnd_toEndOf="@+id/address"
            app:layout_constraintStart_toStartOf="@+id/address"
            app:layout_constraintTop_toBottomOf="@+id/address"
            android:drawableStart="@drawable/phone" />

        <TextView
            android:id="@+id/website"
            style="@style/MyTextViewStyle.Description"
            android:layout_width="0dp"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/website"
            android:text="@string/udacity_website"
            app:layout_constraintEnd_toEndOf="@+id/phone"
            app:layout_constraintStart_toStartOf="@+id/phone"
            app:layout_constraintTop_toBottomOf="@+id/phone"
            android:drawableStart="@drawable/website" />

        <TextView
            android:id="@+id/description"
            style="@style/MyTextViewStyle.Description1"
            android:layout_width="0dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/website"
            app:layout_constraintStart_toStartOf="@+id/website"
            app:layout_constraintTop_toBottomOf="@+id/website" />
    </android.support.constraint.ConstraintLayout>

</ScrollView>
